--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "flowbite-typography": "^1.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^9.0.4"
+    "react-redux": "^9.0.4",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.46",
