--- a/package.json
+++ b/package.json
@@ -16,19 +16,25 @@
     "@reduxjs/toolkit": "^2.0.1",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.7",
+    "@types/styled-components": "^5.1.34",
     "chia-datalayer": "^2.0.13",
     "chia-wallet": "^1.0.9",
+    "components": "^0.1.0",
     "flowbite": "^2.2.1",
     "flowbite-react": "^0.7.2",
     "flowbite-typography": "^1.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-intl": "^6.5.5",
     "react-redux": "^9.0.4",
-    "redux-persist": "^6.0.0"
+    "react-router-dom": "^6.21.1",
+    "redux-persist": "^6.0.0",
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
     "@types/react": "^18.2.47",
     "@types/react-dom": "^18.2.18",
+    "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^6.18.0",
     "@typescript-eslint/parser": "^6.18.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
