feat: begining of browser implementation

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-intl": "^6.5.5",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.21.1",
+    "react-webview": "^0.1.0",
     "redux-persist": "^6.0.0",
     "styled-components": "^6.1.8"
   },
