feat: add datalayer web2 gateway viewer

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,6 +29,6 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src", "src/**/*.json"],
+  "include": ["src", "src/**/*.json", "src/preload.js"],
   "types": ["src/**/*.d.ts"]
 }
