--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "vite",
     "build": "tsc && vite build",
-    "electron": "tsc && cross-env NODE_ENV=development electron .",
+    "electron": "tsc && cp src/preload.js build/preload.js && cross-env NODE_ENV=development electron .",
     "dev": "concurrently \"npm run start\" \"npm run electron\"",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
@@ -18,7 +18,8 @@
     "@tailwindcss/forms": "^0.5.7",
     "@types/styled-components": "^5.1.34",
     "chia-datalayer": "^2.0.13",
-    "chia-wallet": "^1.0.9",
+    "chia-wallet": "^1.0.10",
+    "chia-web2-gateway": "^1.0.7",
     "components": "^0.1.0",
     "flowbite": "^2.2.1",
     "flowbite-react": "^0.7.2",
@@ -27,8 +28,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-intl": "^6.5.5",
-    "react-redux": "^9.0.4",
-    "react-router-dom": "^6.21.1",
+    "react-redux": "^9.1.0",
+    "react-router-dom": "^6.21.2",
     "react-webview": "^0.1.0",
     "redux-persist": "^6.0.0",
     "styled-components": "^6.1.8"
@@ -37,13 +38,13 @@
     "@types/react": "^18.2.47",
     "@types/react-dom": "^18.2.18",
     "@types/react-router-dom": "^5.3.3",
-    "@typescript-eslint/eslint-plugin": "^6.18.0",
-    "@typescript-eslint/parser": "^6.18.0",
+    "@typescript-eslint/eslint-plugin": "^6.18.1",
+    "@typescript-eslint/parser": "^6.18.1",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.16",
     "concurrently": "^8.2.2",
     "cross-env": "^7.0.3",
-    "electron": "^28.1.1",
+    "electron": "^28.1.3",
     "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
