--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tailwindcss/forms": "^0.5.7",
     "@types/styled-components": "^5.1.34",
     "chia-datalayer": "^2.0.13",
+    "chia-datalayer-fs-deploy": "^1.0.3",
     "chia-wallet": "^1.0.11",
     "chia-web2-gateway": "^1.0.10",
     "components": "^0.1.0",
@@ -29,22 +30,23 @@
     "react-dom": "^18.2.0",
     "react-intl": "^6.6.2",
     "react-redux": "^9.1.0",
-    "react-router-dom": "^6.21.3",
+    "react-router-dom": "^6.22.0",
     "react-webview": "^0.1.0",
     "redux-persist": "^6.0.0",
-    "styled-components": "^6.1.8"
+    "styled-components": "^6.1.8",
+    "xterm": "^5.3.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.48",
+    "@types/react": "^18.2.51",
     "@types/react-dom": "^18.2.18",
     "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^6.20.0",
     "@typescript-eslint/parser": "^6.20.0",
-    "@vitejs/plugin-react-swc": "^3.5.0",
+    "@vitejs/plugin-react-swc": "^3.6.0",
     "autoprefixer": "^10.4.17",
     "concurrently": "^8.2.2",
     "cross-env": "^7.0.3",
-    "electron": "^28.2.0",
+    "electron": "^28.2.1",
     "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
