--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "electron": "tsc && cp src/preload.js build/preload.js && cross-env NODE_ENV=development electron .",
     "dev": "concurrently \"npm run start\" \"npm run electron\"",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "electron:package:mac": "npm run build && electron-builder -m -c.extraMetadata.main=build/electron.js",
+    "electron:package:win": "npm run build && electron-builder -w -c.extraMetadata.main=build/electron.js",
+    "electron:package:linux": "npm run build && electron-builder -l -c.extraMetadata.main=build/electron.js"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.1.0",
@@ -18,8 +21,8 @@
     "@tailwindcss/forms": "^0.5.7",
     "@types/styled-components": "^5.1.34",
     "chia-datalayer": "^2.0.13",
-    "chia-datalayer-fs-deploy": "^1.0.3",
-    "chia-wallet": "^1.0.11",
+    "chia-datalayer-fs-deploy": "^1.0.15",
+    "chia-wallet": "^1.0.15",
     "chia-web2-gateway": "^1.0.10",
     "components": "^0.1.0",
     "flowbite": "^2.2.1",
@@ -37,7 +40,7 @@
     "xterm": "^5.3.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.51",
+    "@types/react": "^18.2.52",
     "@types/react-dom": "^18.2.18",
     "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^6.20.0",
