--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.7",
     "@types/styled-components": "^5.1.34",
+    "chia-dat-seeder": "^1.0.1",
     "chia-datalayer": "^2.0.13",
     "chia-datalayer-fs-deploy": "^1.0.15",
+    "chia-root-resolver": "^1.0.0",
     "chia-wallet": "^1.0.15",
     "chia-web2-gateway": "^1.0.10",
     "components": "^0.1.0",
