--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "chia-web2-gateway": "^1.0.10",
     "components": "^0.1.0",
     "express": "^4.18.2",
+    "fast-folder-size": "^2.2.0",
     "flowbite": "^2.2.1",
     "flowbite-react": "^0.7.2",
     "flowbite-typography": "^1.0.3",
