--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "clean": "rm -rf dist && rm -rf build",
+    "prepare": "husky install",
     "electron:package:mac": "npm run clean && npm run build && electron-builder -m -c.extraMetadata.main=build/main.js",
     "electron:package:win": "npm run clean && npm run build && electron-builder -w -c.extraMetadata.main=build/main.js",
     "electron:package:linux": "npm run clean && npm run build && electron-builder -l -c.extraMetadata.main=build/main.js"
@@ -51,6 +52,7 @@
     "xterm": "^5.3.0"
   },
   "devDependencies": {
+    "@commitlint/config-conventional": "^19.0.3",
     "@types/react": "^18.2.63",
     "@types/react-dom": "^18.2.19",
     "@types/react-router-dom": "^5.3.3",
@@ -65,11 +67,25 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.2",
     "postcss": "^8.4.35",
+    "prettier": "^3.2.5",
+    "standard-version": "^9.5.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3",
     "vite": "^5.1.5",
     "wait-on": "^7.2.0"
+  },
+  "standard-version": {
+    "skip": {
+      "bump": true,
+      "commit": true,
+      "tag": true
+    }
+  },
+  "lint-staged": {
+    "*.+(js|ts|tsx)": "npm run lint:prettier-eslint"
   },
   "build": {
     "appId": "org.dlaas.sprout-ui",
