--- a/.github/workflows/build-installers.yaml
+++ b/.github/workflows/build-installers.yaml
@@ -172,7 +172,13 @@ jobs:
       - build_mac
       - build_windows
       - build_linux
+    
     steps:
+      - name: Setup AWS CLI
+        uses: chrislennon/action-aws-cli@v1.1
+        env:
+          ACTIONS_ALLOW_UNSECURE_COMMANDS: true
+
       - name: Download Windows artifacts
         uses: actions/download-artifact@v3
         with:
